# autestoy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: 0.更新.md  1.介绍.md  2.快速开始.md  3.类.md
src/autestoy/: __init__.py
src/autestoy/export/: baseinfo.py  collect.py  markdown.py  messageio.py  obsidian.py  pdf.py  term.py  web.py
src/autestoy/protocols/: ftp.py  jtag.py  local.py  metaclass.py  serial.py  ssh.py  telnet.py
src/autestoy/tools/: ansi.py  baseinfo.py  control.py  datatype.py  globalvar.py  gui.py  local.py  record.py  register.py  register_enum.py  result.py  timestamp.py
tests/test_autestoy/: conftest.py
tests/test_autestoy/test_export/: test_collect.py  test_markdown.py  test_obsidian.py
tests/test_autestoy/test_protocols/: test_metaclass.py  test_serial.py  test_ssh.py  test_telnet.py
tests/test_autestoy/test_tools/: test_ansi.py  test_control.py  test_datatype.py  test_record.py  test_register.py  test_timestamp.py
