[project]
name = "autestoy"
version = "0.1.2"
description = "autestoy is a Python toy library for automating tests. autestoy -> auto test toy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=4.0.0",
    "pyserial>=3.5",
    "reportlib>=3.4.0",
]

# [project.url]
# Repository = "https://github.com/Aov1/autestoy.git"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = [
    "./src",
    # "./.venv/lib/python3.12/site-packages"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
